# twitterclone

./: .gitignore  pyproject.toml  requirements.txt
authentication/: forms.py  urls.py  views.py
notification/: models.py  urls.py  views.py
notification/migrations/: 0001_initial.py  0002_notificationmodel_tweet.py  0003_notificationmodel_user.py
static/css/: style.css
templates/: base.html  card.html  follow_card.html  profile_card.html  tweet_card.html
templates/authentication/: auth_base.html  auth_home.html  index.html  login.html  signup.html
templates/error_pages/: 404.html  500.html  base.html
templates/notification/: notification.html
templates/tweet/: detail.html  tweet.html
templates/twitteruser/: index.html  profile.html
tweet/: admin.py  forms.py  models.py  urls.py  views.py
tweet/migrations/: 0001_initial.py  0002_auto_20200930_1344.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  forms.py  helpers.py  models.py  urls.py  views.py
twitteruser/migrations/: 0001_initial.py
