[tool.poetry]
name = "twitterclone"
version = "0.1.0"
description = ""
authors = ["luisfff29 <luisfff29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.14"
autopep8 = "^1.5.2"
flake8 = "^3.8.2"
pillow = "^7.2.0"
django-environ = "^0.4.5"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
